[package]
name = "qs"
version = "0.1.0"
authors = ["Jeff Chen <hello@jeff.yt>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
base64 = "0.10.0"
diesel = { version = "1.3.3", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
env_logger = "0.6.0"
hyper = "0.12.19"
listenfd = "0.3"
reqwest = "0.9.5"
url = "1.7.2"