[package]
name = "qs"
version = "0.1.0"
authors = ["Jeff Chen <hello@jeff.yt>"]
edition = "2018"

[[bin]]
name = "qs"
path = "src/backend/main.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
base64 = "0.10.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.13.0"
env_logger = "0.6.0"
futures = "0.1.25"
hyper = "0.12.19"
jsonwebtoken = "5.0.1"
# juniper 0.11+ only supports uuid 0.7
juniper = { version = "0.10.0", features = ["chrono", "url", "uuid"] }
listenfd = "0.3"
log = "0.4.6"
reqwest = "0.9.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1.41"
r2d2 = "0.8.3"
url = "1.7.2"
# diesel 1.3.x only supports uuid 0.6.x
uuid = { version = "0.6.5", features = ["serde", "v4"] }