[package]
name = "qs"
version = "0.1.0"
authors = ["Jeff Chen <hello@jeff.yt>"]
edition = "2018"

[[bin]]
name = "qs-web"
path = "src/backend/web.rs"

# [[bin]]
# name = "qs-worker"
# path = "src/backend/worker.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
base64 = "0.10.1"
chrono = { version = "0.4.6", features = ["serde"] }
chrono-tz = { version = "0.5.0", features = ["serde"] }
diesel = { version = "1.4.1", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.13.0"
env_logger = "0.6.0"
futures = "0.1.25"
hyper = "0.12.23"
jsonwebtoken = "5.0.1"
juniper = { version = "0.11.1", features = ["chrono", "url", "uuid"] }
listenfd = "0.3"
log = "0.4.6"
oppgave = { git = "https://github.com/jchen1/oppgave" }
reqwest = "0.9.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
threadpool = "1.7.1"
time = "0.1.42"
r2d2 = "0.8.3"
rayon = "1.0.3"
redis = "0.9.1"
url = "1.7.2"
uuid = { version = "0.7.2", features = ["serde", "v4"] }
